//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id Int [pk, increment]
  userId Int [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id Int [pk, increment]
  sessionToken String [unique, not null]
  userId Int [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id Int [pk, increment]
  name String
  email String [unique, not null]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  password String
  role UserRole [not null, default: 'User']
  provider String
  createdDate DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orgId Int
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Exemplar {
  id Int [pk, increment]
  name String [unique, not null]
  content String [not null]
  category String [not null]
  published Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  createdById Int [not null]
  updatedAt DateTime [not null]
  updatedById Int [not null]
}

Enum UserRole {
  User
  Admin
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]